Fixed spacing between project nav, and footer on mobile devices

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -30,7 +30,7 @@
 .content {
 	background: $color-white;
 	padding: 7rem 0 0;
-	margin-bottom: 45.9rem;
+	margin-bottom: 31.24rem;
 	position: relative;
 	top: 0;
 	left: 0;
